--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -31,7 +31,8 @@
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
-    "next": "14.2.8",
+    "next": "^14.2.24",
+    "nuqs": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
